@@ -14,8 +14,12 @@ postgresql-common (87) UNRELEASED; urgency=low
   * debian/autovacuum.conf: Point out that this file is only relevant for
     PostgreSQL versions earlier than 8.1. Thanks to Ross Boylan for pointing
     this out.
+  * Add t/051_inconsistent_encoding_upgrade.t: Check that upgrades from
+    pre-8.3 to 8.3 succeed and have correct encodings if the old DB had a
+    database whose encoding did not match the server locale. This reproduces
+    #472930.
 
- -- Martin Pitt <mpitt@debian.org>  Sun, 30 Mar 2008 20:50:01 +0200
+ -- Martin Pitt <mpitt@debian.org>  Sun, 30 Mar 2008 22:17:15 +0200
 
 postgresql-common (86) unstable; urgency=low
 
